# mxs-serial-link

./: .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
examples/: 01_test_terminal_input.rs  test_terminal_input.rs
examples/01/: main.rs
src/: data.rs  lib.rs  main.rs  mxs_decoder.rs  mxs_encoder.rs  mxs_shared.rs  stdio_helper.rs
