# Reference: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name        = "mxs-serial-link"
version     = "0.0.2"
edition     = "2024"
description = "MXS Serial Link"
readme      = "README.md"
authors     = ["lhndo"]
categories  = ["cli"]
keywords    = ["serial", "mxs"]


license    = "MIT"
repository = "https://github.com/lhndo/mxs-serial-link"
publish    = false



[dependencies]

anyhow     = "1.0.100"
crossterm  = "0.29.0"
ctrlc      = "3.5.1"
serialport = "4.8.1"



[features]
# Primary Features
default     = []
default-dev = []

# Secondary Features



# cargo build/run


[profile.dev]
opt-level        = 0
debug            = true
strip            = "none"
debug-assertions = true
overflow-checks  = true
lto              = false
panic            = 'unwind'
incremental      = true
codegen-units    = 256

[profile.release]
opt-level        = 3
debug            = false
strip            = true
debug-assertions = false
overflow-checks  = false
lto              = true
panic            = 'abort'
incremental      = false
codegen-units    = 1


[lints.rust]
dead_code        = "allow"
unused_variables = "allow"
unused_labels    = "allow"

[lints.clippy]
needless_return       = "allow"
new_without_default   = "allow"
comparison_chain      = "allow"
manual_range_contains = "allow"
needless_range_loop   = "allow"
unused_self           = "allow"
